--- a/style.css
+++ b/style.css
@@ -90,9 +90,10 @@ article img:hover {
 
 /**************** HEADER ***************/
 .header {
-    background-color: #eee;
+    background-color: #ffffff;
     margin-top: 0;
-    height: 80px;   
+    height: 80px;
+    box-shadow: 0px 4px 14px 10px rgba(0, 0, 0, 0.03);  
 }
 
 .nav-header {
@@ -134,6 +135,9 @@ ul.menu {
     margin-left: 110px;
 }
 
+  
+
+
 /*************** FOOTER ****************/
 ul #menu-menu-footer.menu {
     display: flex;
@@ -147,7 +151,8 @@ ul #menu-menu-footer.menu {
 
 footer {
     margin-top: 30px;
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
+    background-color: #ffffff; 
 }
 
 /* Ajouter une ligne continue au-dessus du footer */
