--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ Version: 1.0
 body {
     width: 100%;
     max-width: 100%;
-    background: #f1f1f1; 
+    background: #ffffff; 
     color: #23282d; 
     font-family: 'Space Mono', sans-serif;     
 }
@@ -163,3 +163,33 @@ footer::before {
     margin-top: 30px; /* Espace entre la ligne et le contenu du footer */
     margin-bottom: -5px;
 }
+
+/*************** La modale ****************/
+#contact-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#contact-modal form {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fefefe;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-width: 500px; /* Ajuster la largeur maximale selon vos besoins */
+    width: 100%;
+}
+
+
+
+
