--- a/style.css
+++ b/style.css
@@ -165,6 +165,18 @@ footer::before {
 }
 
 /*************** La modale ****************/
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 #contact-modal {
     display: none;
     position: fixed;
@@ -173,22 +185,72 @@ footer::before {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-y: auto;
     background-color: rgba(0, 0, 0, 0.4);
+    animation: fadeIn 2s; /* Animation de fondu */
 }
 
 #contact-modal form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fefefe;
-    padding: 20px;
+    padding: 100px;
+    padding-bottom: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    max-width: 500px; /* Ajuster la largeur maximale selon vos besoins */
+    max-width: 500px;
     width: 100%;
+    height: 90%;
+    overflow-y: auto;
 }
+
+form.wpcf7-form.init {
+    position: relative;
+    background-color: #fefefe;
+    border: 5px solid black;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Ajouter une image en haut du formulaire */
+.wpcf7-form.init {
+    background: url('assets/images/contact-header.png') no-repeat center top;
+    background-size: contain; 
+}
+
+form.wpcf7-form input {
+    border-radius: 6px; 
+    width: 263px; 
+    height: 63px;
+}
+
+
+form.wpcf7-form textarea {
+    border-radius: 6px; 
+    width: 263px; 
+}
+
+form.wpcf7-form input[type="submit"] {
+    border-radius: 0; /* Remettre à zéro les bords arrondis pour le bouton "Envoyer" */
+}
+
+form.wpcf7-form.init textarea {
+    height: 210px;
+}
+
+form.wpcf7-form.init label {
+    color: #313144; 
+    font-weight: bold;
+}
+
+
 
 
 
