--- a/sass/_single-photos.scss
+++ b/sass/_single-photos.scss
@@ -30,3 +30,20 @@
     align-items: flex-end;
     margin-top: 20px;
 }
+
+.photo-infos h2 {
+    font-style: italic;
+    font-size: 66px;
+    font-weight: 400;
+    margin : 0; 
+}
+
+.photo-infos p {
+    font-family: 'Space Mono';
+    font-size: 14px;
+    line-height: 1.0; 
+}
+
+.photo-infos p:last-child {
+    margin-bottom: 2em; /* Ajoutez la marge basse souhaitée pour le dernier paragraphe */
+}
