css single-photo

--- a/sass/_single-photos.scss
+++ b/sass/_single-photos.scss
@@ -45,5 +45,5 @@
 }
 
 .photo-infos p:last-child {
-    margin-bottom: 2em; /* Ajoutez la marge basse souhaitée pour le dernier paragraphe */
+    margin-bottom: 2em; 
 }
