--- a/style.css
+++ b/style.css
@@ -292,5 +292,5 @@ form.wpcf7-form.init input[type=submit]:hover {
 }
 
 .photo-infos p:last-child {
-  margin-bottom: 2em; /* Ajoutez la marge basse souhaitée pour le dernier paragraphe */
+  margin-bottom: 2em;
 }/*# sourceMappingURL=style.css.map */
