--- a/sass/_single-photos.scss
+++ b/sass/_single-photos.scss
@@ -1,8 +1,13 @@
 /*************** STYLE SINGLE PHOTOS ***************/
+.photo-section {
+    display: flex;
+    flex-direction: column; 
+}
+
 .photo-contenu {   
     margin-left: auto;
     margin-right: auto;
-    max-width: 1200px; /* Ajustez cette valeur en fonction de la largeur maximale souhaitée */  
+    max-width: 1200px;   
 }
 
 .photo-contenu-infos {
@@ -14,12 +19,14 @@
 
 .photo-infos {
     display: flex;
-    width: 48%;
+    width: 52%;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
     font-family: 'Space Mono';
+    text-transform: uppercase;
     border-bottom: solid 1px;
+    margin-right: 2em;
 }
 
 .image-photo {
@@ -47,3 +54,70 @@
 .photo-infos p:last-child {
     margin-bottom: 2em; 
 }
+
+/* Partie du milieu */
+.photo-milieu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0; 
+}
+
+.bouton-contact,
+.fleches {
+    width: 40%; 
+    text-align: center;
+ }
+
+.bouton-contact a {
+    display: block;
+    padding: 10px;
+    background-color: #d8d8d8; 
+    color: black; 
+    text-decoration: none;
+}
+
+.fleches {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.fleche-gauche,
+.fleche-droite a{
+    width: 25px; 
+    height: 25px; 
+    background-size: contain; 
+    background-repeat: no-repeat;
+}
+
+#texte-bouton {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 56%;
+}
+
+.photo-fleches {
+    display: flex;
+    flex-direction: column;
+}
+
+.texte-gauche {
+    width: 70%;
+    text-align: left;
+}
+
+.bouton-contact {
+     margin-right: 7%;
+ }
+
+
+
+
+
+ 
+
