--- a/sass/_single-photos.scss
+++ b/sass/_single-photos.scss
@@ -1,4 +1,5 @@
 /*************** STYLE SINGLE PHOTOS ***************/
+/* Partie du haut */
 .photo-section {
     display: flex;
     flex-direction: column; 
@@ -114,6 +115,12 @@
 .bouton-contact {
      margin-right: 7%;
  }
+
+ 
+ /* Partie du bas */
+  
+
+
 
 
 
