--- a/sass/_single-photos.scss
+++ b/sass/_single-photos.scss
@@ -61,7 +61,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 10px 0; 
+    margin: 10px 0;
+    border-bottom: 1px solid black; 
 }
 
 .bouton-contact,
