--- a/style.css
+++ b/style.css
@@ -364,4 +364,8 @@ form.wpcf7-form.init input[type=submit]:hover {
   margin-right: 7%;
 }
 
+.image-container {
+  margin-bottom: -12px;
+}
+
 /* Partie du bas *//*# sourceMappingURL=style.css.map */
