--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,7 +3,8 @@
     background-color: #ffffff;
     margin-top: 0;
     height: 80px;
-    box-shadow: 0px 4px 14px 10px rgba(0, 0, 0, 0.03);  
+    box-shadow: 0px 4px 14px 10px rgba(0, 0, 0, 0.03);
+    max-width: 1440px; 
 }
 
 .nav-header {
@@ -32,8 +33,9 @@ margin-right: 45px;
 ul.menu {
     display: flex;
     justify-content: center;
-    padding-left: 0;
+    padding-right: 22px;
     list-style-type: none;
+
 }
 
 .menu-menu-principal-container {
