--- a/sass/_single-photos.scss
+++ b/sass/_single-photos.scss
@@ -141,15 +141,53 @@
 }
 
 .related-photo {
-    width: 564px; /* Largeur fixe pour chaque image */
-    height: 495px; /* Hauteur fixe pour chaque image */
+    position: relative;
+    width: 35em;
+    height: 31em; 
 }
 
 .related-photo-thumbnail {
-    width: 100%; /* La largeur de l'image prend 100% de la largeur du conteneur */
-    height: 100%; /* La hauteur de l'image prend 100% de la hauteur du conteneur */
-    object-fit: cover; /* L'image est redimensionnée tout en conservant ses proportions */
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
 }
+
+/* Hover images du bas */
+.related-photo:hover .related-photo-thumbnail {
+    filter: brightness(70%); /* Assombrit l'image au survol */
+}
+
+.related-photo-overlay {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.related-photo:hover .related-photo-overlay {
+    opacity: 1;
+}
+
+img.icon_eye {
+    position: absolute;
+    left: 45%;
+    top: 50%;
+    width: 50px;
+    height: 35px;
+}
+
+img.icon_fullscreen {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 35px;
+    height: 35px;
+}
+
+
+
+
+
+
+
 
 
 
