--- a/style.css
+++ b/style.css
@@ -507,4 +507,44 @@ img.icon_fullscreen {
   margin-left: 50px;
   margin-right: 50px;
   min-height: 100vh;
+}
+
+.hero {
+  position: relative;
+  display: flex;
+  justify-content: center; /* Centre le contenu horizontalement */
+  align-items: center; /* Centre le contenu verticalement */
+  height: 962px; /* Hauteur de la banner */
+  margin-bottom: 50px;
+}
+
+.image-banner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.hero-content {
+  position: relative;
+  z-index: 1;
+  text-align: center; /* Centre le texte horizontalement */
+}
+
+.hero-title {
+  margin: 0; /* Supprime les marges par défaut */
+  color: white;
+  font-size: 96px;
+  font-style: italic;
+  color: transparent;
+  -webkit-text-stroke: 3px white;
+}
+
+.accueil-contenu {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1148px;
 }/*# sourceMappingURL=style.css.map */
