--- a/sass/_front-page.scss
+++ b/sass/_front-page.scss
@@ -46,11 +46,16 @@
 
 .load-more-button {
     background-color: #f0f0f0; 
-    color: #333; 
+    color: #333;
+    width: 272px;
+    height: 50px;
+    font-family: "Space Mono"; 
+    font-size: 12px;
     padding: 10px 20px; 
     border: none; 
     cursor: pointer; 
     transition: background-color 0.3s ease; /* Animation au survol */
+    margin-bottom: 18px;
 }
 
 .load-more-button:hover {
